--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ##Connect to database using Spring JPA & Postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/auditfinance
+spring.datasource.url=jdbc:postgresql://localhost:5432/audit
 spring.datasource.username=postgres
-spring.datasource.password=meryha123
+spring.datasource.password=mery123
 
 ##JPA config
 spring.jpa.properties..hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
